--- a/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
+++ b/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
@@ -21,7 +21,7 @@ www.lambda-pi.de}
 	\maketitle
 	\newpage
 	
-	% Inhaltsverzeichnis einfÃ¼gen
+	% Inhaltsverzeichnis einfügen
 	\tableofcontents
 	\newpage
 	
