Funktionen für Textboxen hinzugefügt

--- a/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
+++ b/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{scrreprt}
+\documentclass[a4paper,11pt,xcolor=dvipsnames]{scrreprt}
 
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
@@ -7,7 +7,7 @@
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage[tracking=true]{microtype}
 \usepackage{lmodern}
-\usepackage{color}
+\usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{hyperref}
 
 % ToDo Notes einbinden
