ToDo's für Boxen hinzugefügt

--- a/Skript-Abivorbereitung/Defines/Boxes.tex
+++ b/Skript-Abivorbereitung/Defines/Boxes.tex
@@ -9,6 +9,11 @@
 
 
 % Boxen definieren
+%
+% Usage: \<command{%
+% 	<input>
+%}
+%
 % Formel Boxen
 \newcommand{\formel}[1]{
 	\fcolorbox{BoxBorderframe}{BoxBackground}{%
