--- a/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
+++ b/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
@@ -34,9 +34,9 @@
 	\tableofcontents
 	\newpage
 	
-	\todo[color=red]{In allen Teilen ToDo's für die Umstrukturierung einfügen}
-	\todo[color=red]{Einzelne Sektionen mit kurzer Zusammenfassung}
-	\todo[color=red]{Einzelne Sektionen mit Signalwörter}
+	\todo[color=green]{In allen Teilen ToDo's für die Umstrukturierung einfügen}
+	\todo[color=green]{Einzelne Sektionen mit kurzer Zusammenfassung}
+	\todo[color=green]{Einzelne Sektionen mit Signalwörter}
 	% Vorwort 
 	\input{Chapters/Vorwort.tex}
 	
