Boxen für Formeln hinzugefügt, unbearbeitete ToDos Inline

--- a/Skript-Abivorbereitung/Defines/ToDos.tex
+++ b/Skript-Abivorbereitung/Defines/ToDos.tex
@@ -11,6 +11,7 @@
 % Farben:	- Red:		noch offener Punkt
 %			- RubineRed:noch offenes Feature (nicht ganz so große Prio)
 %			- Orange:	in Bearbeitung
+%			- Purple:	Keine Veränderungen notwendig
 %			- Green:	fertig bearbeitet
 %			- Blue:		Veränderter Inhalt reviewed
 % Wenn der Inhalt und die Grammatik überprüft wurde kann die ToDoNote gelöscht
