--- a/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
+++ b/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
@@ -13,6 +13,9 @@
 % ToDo Notes einbinden
 \input{Defines/ToDos.tex}
 
+% Boxen einfügen
+\input{Defines/Boxes.tex}
+
 \title{Skript zum Mathe - Abi-Vorbereitungskurs~2015\\
 	\includegraphics[scale=0.15]{Images/Logo.jpg}
 	\author{Jan, Lucas \& Patrick\\
@@ -40,8 +43,8 @@
 	% Vorwort 
 	\input{Chapters/Vorwort.tex}
 	
-	\todo[color=red]{Kapitel "Aufbau des Skripts" einfügen}
-	\todo[color=red]{Kapitel "Strukturiertes lösen von Aufgaben" einfügen}
+	\todo[inline,color=red]{Kapitel "Aufbau des Skripts" einfügen}
+	\todo[inline,color=red]{Kapitel "Strukturiertes lösen von Aufgaben" einfügen}
 	
 	% Wiederholungen und Vorgeplänkel
 	\input{Chapters/Wiederholungen/_Wiederholungen}
@@ -55,5 +58,5 @@
 	% Stochastik
 	\input{Chapters/Stochastik/_Stochastik.tex}
 	
-	\todo[color=red]{"Anhang Taschenrechner" einfügen}
+	\todo[inline,color=red]{"Anhang Taschenrechner" einfügen}
 \end{document}
