Farbe der Kästen nun im Grün des Logos

--- a/Skript-Abivorbereitung/Defines/Boxes.tex
+++ b/Skript-Abivorbereitung/Defines/Boxes.tex
@@ -1,6 +1,8 @@
 % Farben definieren (Nicht gebrauchtes auskommentieren):
 % Online-Version
-\colorlet{BoxBackground}{LimeGreen!100!}
+%\colorlet{BoxBackground}{LimeGreen!100!}
+\definecolor{BoxBackground}{HTML}{83EF03}	% Boxen in Lambda-Pi Farbe (siehe
+% Logo)
 \colorlet{BoxBorderframe}{Black!100!}
 
 % Druckversion
