--- a/Skript-Abivorbereitung/Defines/Boxes.tex
+++ b/Skript-Abivorbereitung/Defines/Boxes.tex
@@ -20,7 +20,8 @@
 \newcommand{\formel}[1]{
 	\\
 	\fcolorbox{BoxBorderframe}{BoxBackground}{%
-		\parbox{0.87\linewidth}{%
+		\parbox{%0.87
+		\linewidth}{%
 			#1
 		}
 	} \\
