--- a/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
+++ b/Skript-Abivorbereitung/Skript-Abivorbereitung-Mathe.tex
@@ -16,9 +16,9 @@
 % Boxen einfügen
 \input{Defines/Boxes.tex}
 
-\title{Skript zum Mathe - Abi-Vorbereitungskurs~2015\\
+\title{Skript zum Mathe - Abi-Vorbereitungskurs~2016\\
 	\includegraphics[scale=0.15]{Images/Logo.jpg}
-	\author{Jan, Lucas \& Patrick\\
+	\author{Jan \& Patrick\\
 	www.lambda-pi.de}
 	\date{\today}}
 
@@ -43,8 +43,9 @@
 	% Vorwort 
 	\input{Chapters/Vorwort.tex}
 	
-	\todo[inline,color=red]{Kapitel "Aufbau des Skripts" einfügen}
-	\todo[inline,color=red]{Kapitel "Strukturiertes lösen von Aufgaben" einfügen}
+	\todo[color=green]{Kapitel <Aufbau des Skripts> einfügen}
+	% Aufbau des Skriptes erklären
+	\input{Chapters/Aufbau}
 	
 	% Wiederholungen und Vorgeplänkel
 	\input{Chapters/Wiederholungen/_Wiederholungen}
@@ -58,5 +59,13 @@
 	% Stochastik
 	\input{Chapters/Stochastik/_Stochastik.tex}
 	
-	\todo[inline,color=red]{"Anhang Taschenrechner" einfügen}
+	\todo[color=green]{Kapitel <Strukturiertes lösen von Aufgaben> einfügen}
+	% Strukturiertes Lösen von Aufgaben
+	\input{Chapters/StrukturiertesLoesen.tex}
+	
+	\todo[color=green]{Kapitel <Auf was man beim Abi achten sollte> einfügen}
+	% Auf was man beim Abi achten sollte
+	\input{Chapters/TippsAbi.tex}
+	
+	\todo[color=purple]{<Anhang Taschenrechner> einfügen}
 \end{document}
