Stand Elterntag Oktober 2015

--- a/Skript-Abivorbereitung/Defines/Boxes.tex
+++ b/Skript-Abivorbereitung/Defines/Boxes.tex
@@ -1,13 +1,13 @@
 % Farben definieren (Nicht gebrauchtes auskommentieren):
 % Online-Version
 %\colorlet{BoxBackground}{LimeGreen!100!}
-\definecolor{BoxBackground}{HTML}{83EF03}	% Boxen in Lambda-Pi Farbe (siehe
+%\definecolor{BoxBackground}{HTML}{83EF03}	% Boxen in Lambda-Pi Farbe (siehe
 % Logo)
-\colorlet{BoxBorderframe}{Black!100!}
+%\colorlet{BoxBorderframe}{Black!100!}
 
 % Druckversion
-%\colorlet{BoxBackground}{Gray!70!}
-%\colorlet{BoxBorderframe}{Black!100!}
+\colorlet{BoxBackground}{Gray!20!}
+\colorlet{BoxBorderframe}{Black!100!}
 
 
 % Boxen definieren
