--- a/Skript-Abivorbereitung/Defines/ToDos.tex
+++ b/Skript-Abivorbereitung/Defines/ToDos.tex
@@ -3,7 +3,7 @@
 	[german
 	,colorinlistoftodos
 	,textwidth=60
-	%,disable %nur wenn finale Abgabe einkommentieren
+	,disable %nur wenn finale Abgabe einkommentieren
 	]
 {todonotes}
 
